Bug 140848 - FORMATTING: Display errors of rotated vector graphics
Summary: FORMATTING: Display errors of rotated vector graphics
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.4.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-03-07 07:32 UTC by Matthias Jerye
Modified: 2021-03-17 20:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file and screen shots (390.68 KB, application/x-zip-compressed)
2021-03-08 17:33 UTC, Matthias Jerye
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Jerye 2021-03-07 07:32:31 UTC
Description:
A group of elements rotated by 270° is not displayed correctly. 

Steps to Reproduce:
0. The drawing area is A4 landscape. 
1. Draw a siemens star test pattern with grouped elements.
2. Cover the left side and top with white rectangles. 
3. Group all the elements.
4. Rotate the graphic 270°. 

Actual Results:
Parts of the white bars disappear. 

Expected Results:
I expect a result similar to that of a 90° or 180° rotation. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Sorry, I have no choice of uploading the examples here.
Comment 1 Regina Henschel 2021-03-07 22:01:38 UTC
(In reply to Matthias Jerye from comment #0)
> Additional Info:
> Sorry, I have no choice of uploading the examples here.

Above the 'Additional Comments' field is a line 'Add an attachment'. Click there to upload a file.

Please make a small file, which does only contain the problematic drawing. Without example file it is nearly impossible to investigate the problem.
Comment 2 Matthias Jerye 2021-03-08 17:33:17 UTC
Created attachment 170339 [details]
Sample file and screen shots
Comment 3 Regina Henschel 2021-03-08 18:52:27 UTC
I see the problem in Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 8e49505fa7352023c252bf794ae84c9082d7264e
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

In some zoom levels the to two overlapping rectangle become transparent where they overlap.

I don't see the problem in Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 8e49505fa7352023c252bf794ae84c9082d7264e
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

So perhaps related to Skia.

@Matthias Jerye: Please go to menu Help > About. Click on the button 'Version Information'. That puts the version information like above into the clipboard. Then paste it here in the bug report.
Comment 4 Matthias Jerye 2021-03-09 19:40:20 UTC
Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 8; OS: Windows 10.0 Build 19042; 
UI render: Skia/Raster; VCL: win
Locale: de-DE (de-DE); UI: de-DE
Calc: CL
Comment 5 QA Administrators 2021-03-11 04:50:04 UTC Comment hidden (obsolete)
Comment 6 Regina Henschel 2021-03-11 11:21:00 UTC
You use Skia too. So I'll put it to the Skia-Meta bug so that the Skia maintainer becomes aware of it.
Comment 7 Commit Notification 2021-03-17 17:02:06 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff1cfaf87ce0aa9673e1c3f92308cde6a2c6aa69

round polygon points before merging them for Skia drawing (tdf#140848)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2021-03-17 20:22:55 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/ded4b38deb2d7190ecc500250b63204b0f6d5577

round polygon points before merging them for Skia drawing (tdf#140848)

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.